added new paragraphs

--- a/file.html
+++ b/file.html
@@ -6,16 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <hr width="50%"><center><h1>shrishti bohora</h1></center>
-    <hr width="50%">
-    <h2>shrishti bohora</h2>
- <center>   <h3>shrishti bohora</h3></center>
-    <h4>shrishti bohora</h4>
-    <h5>shrishti bohora</h5>
-    <h6>shrishti bohora</h6>
-    <p><u>Lorem ipsum<b> dolor</b> sit amet<i> consectetur adipisicing</i> elit. <br>Quis ad porro voluptatem officia, numquam rerum, ab hic eveniet cum dolor facilis? Officiis praesentium sunt esse quas deserunt soluta molestias facere?</u></p>
-    <abbr title="shrishti">BCA</abbr>
-    <marquee behavior =""direction="right"loop=5> Hi1! myself shrishti bohora. </marquee>
+    <h1><center>About Me</center></h1>
+   <hr> <p><marquee behavior=""direction"="left">step by step,lesson by lesson,sucesses is build by those who dare to begin!</p></marquee><hr>
+   <p>Hello! my name is shrishti bohora.I am a student of BKC, Facullty-BCA and currently learning web desigining.I am deeply passionate about web design,coding,and technonlogy. Ever since I discovered the art of creating websites,I have been fascinated by how design and funcitionality work together to make digital experiences seamless. I love learning new techniques and exploring creative ways to make websites more userfriendly and visually appealing. </p>
+   <p><b> Web Designing is my passion.</b></p>
+   <p> I enjoy crafting digital experience that are both beautiful and funtional.</p>
+   <p><u>Bringing ideas to life through design keeps me motivated!</u></p>
+   <h2><center> My interests & Skills</center></h2><hr width="50%"
+   <p>1.<b>Programming:</b> HTML,CSS,Javascript,Python</p>
+   <p>2.Design: UI/UX principles,Graphic Design,Responsible Web Design</p>
+   <p>3.<u>Hobbies:</u> Reading design blogs,experiementing with new layouts, playing around with color schemes</p>
+   <p>I am constantly working on improving my web web development and design skills.Wheather it's learning a new framework or testing different user interface design, I enjoy every step of the journey. if you share the same enthusiasm, feel free to connect with me for collabration and creative discussions!<hr> </p>
+
+
 
 </body>
 </html>
