--- a/file.html
+++ b/file.html
@@ -5,20 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1><center>About Me</center></h1>
-   <hr> <p><marquee behavior=""direction"="left">step by step,lesson by lesson,sucesses is build by those who dare to begin!</p></marquee><hr>
-   <p>Hello! my name is shrishti bohora.I am a student of BKC, Facullty-BCA and currently learning web desigining.I am deeply passionate about web design,coding,and technonlogy. Ever since I discovered the art of creating websites,I have been fascinated by how design and funcitionality work together to make digital experiences seamless. I love learning new techniques and exploring creative ways to make websites more userfriendly and visually appealing. </p>
-   <p><b> Web Designing is my passion.</b></p>
-   <p> I enjoy crafting digital experience that are both beautiful and funtional.</p>
-   <p><u>Bringing ideas to life through design keeps me motivated!</u></p>
-   <h2><center> My interests & Skills</center></h2><hr width="50%"
-   <p>1.<b>Programming:</b> HTML,CSS,Javascript,Python</p>
-   <p>2.Design: UI/UX principles,Graphic Design,Responsible Web Design</p>
-   <p>3.<u>Hobbies:</u> Reading design blogs,experiementing with new layouts, playing around with color schemes</p>
-   <p>I am constantly working on improving my web web development and design skills.Wheather it's learning a new framework or testing different user interface design, I enjoy every step of the journey. if you share the same enthusiasm, feel free to connect with me for collabration and creative discussions!<hr> </p>
 
+<table border="1" cellspacing="0" width="500">
+    <tr>
+        <th>S.no</th>
+        <th>Name</th>
+        <th>Roll no.</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>shrishti</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>sapana</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>abisha</td>
+        <td>5</td>
+        
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>aayusha</td>
+        <td>7</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>pratima</td>
+        <td>6</td>
+    </tr>
+</table>
+<a href="https://www.facebook.com/">facebook</a>
+<a heref="https://www.youtube.com/">youtube</a>
+<p style="color:blue; background-color:red;">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+     Quod, architecto? Accusamus excepturi dicta recusandae id officia voluptates
+     optio ad hic esse nesciunt. Iste facere totam quae accusantium architecto ipsam commodi?
 
+</p>
 
 </body>
 </html>
