--- a/file.html
+++ b/file.html
@@ -6,47 +6,122 @@
     <title>Document</title>
 </head>
 
-<table border="1" cellspacing="0" width="500">
-    <tr>
-        <th>S.no</th>
-        <th>Name</th>
-        <th>Roll no.</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>shrishti</td>
-        <td>27</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>sapana</td>
-        <td>27</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>abisha</td>
-        <td>5</td>
-        
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>aayusha</td>
-        <td>7</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>pratima</td>
-        <td>6</td>
-    </tr>
-</table>
-<a href="https://www.facebook.com/">facebook</a>
-<a heref="https://www.youtube.com/">youtube</a>
-<p style="color:blue; background-color:red;">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-     Quod, architecto? Accusamus excepturi dicta recusandae id officia voluptates
-     optio ad hic esse nesciunt. Iste facere totam quae accusantium architecto ipsam commodi?
 
-</p>
+   <center><h1 style="background-color: red;">Order and unorder list</h1></center><br><br>
+   <!--order list-->
+   <ol>
+    <li>Programming Language
+        <ul>
+            <li>C</li>
+            <li>C++</li>
+            <li>java</li>
+         </ul>
 
-</body>
-</html>
+    </li>
+    <li>DSA
+        <ul type="square">
+            <li>Array</li>
+            <li>LinkliSt</li>
+            <li>stack</li>
+            <li>Queue</li>
+            <li>Trees</li>
+            <li>Graphs</li>
+
+        </ul>
+    </li>
+   </ol>
+
+  <center> <h2 style="background-color: red;">table format</h2> </center>
+  <table style="background-color: red;" border="1" cellspacing="0" width="500">
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+        <th> Header 4</th>
+        <th>Header 5</th>
+
+    </tr>
+    <tr>
+        <th>Row 1,col 1</th>
+        <th>Row 1,col 2</th>
+        <th>Row 1,Col 3</th>
+        <th>Row 1, Col 4</th>
+        <th>Row 1,Col 5</th>
+
+    </tr>
+    <tr>
+        <th>Row 2,Col 1</th>
+        <th>Row 2, Col 2</th>
+        <th>Row 2,Col 3</th>
+        <th>Row 2,Col 4</th>
+        <th>Row 2,Col 5</th>
+    </tr>
+    <tr>
+        <th>Row 3,Col 1</th>
+        <th>row 3,col 2</th>
+        <th>Row 3,Col 3 </th>
+        <th>Row 3,Col 4</th>
+        <th>Row 3,Col 5</th>
+    </tr>
+    <tr>
+        <th>Row 4,Col 1</th>
+        <th>Row 4,col 2</th>
+        <th>Row 4,Col 3</th>
+        <th>Row 4,Col 4</th>
+        <th>Row 4,Col 5</th>
+    </tr>
+    <tr>
+        <th>Row 5,Col1</th>
+        <th>Row5,Col2</th>
+        <th>Row5,Col3</th>
+        <th>Row5,Col4</th>
+        <th>row5,col5</th>
+    </tr>
+ </table>
+ <center><h3 style="background-color: red;"> Anchor tag</h3></center>
+ <a href https://www.youtube.com/>facebook</a> <Br> <br>     
+ <a href https://www.instagram.com/>instagram</a>
+<center> <h4 style="background-color: red;">Form</h4></center>
+ <hr><p style="color: red;"><marquee> Driven by passion,guided by excellence.</marquee></p><hr>
+ <label for="Name" >Name</label>
+ <input type="text" placeholder="first name">
+ <input type="text" placeholder="middle name">
+ <input type="text" placeholder="last name">
+ <label for="Password">password</label>
+ <input type="text" placeholder=" enter your password"><br><br>
+ <label for="Months">Months</label>
+ <input type="text" placeholder=""><br><br>
+<label for="text">gender:</label>
+<label for="text">male</label>
+<input type="radio" name="gender">
+<label for="text">female</label>
+<input type="radio" name="gender">
+<label for="text">others</label>
+<input type="radio" name="gender"><br><br>
+<label for="text">About me</label>
+<textarea name=""id="" cols="10" rows="10"></textarea><br><br>
+<label for="text">ADDRESS of file:</label><br><br>
+<input type="file"><hr>
+<input type="submit">
+<button>clear the data</button>
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+    
