--- a/file.html
+++ b/file.html
@@ -90,7 +90,7 @@
  <label for="Password">password</label>
  <input type="text" placeholder=" enter your password"><br><br>
  <label for="Months">Months</label>
- <input type="text" placeholder=""><br><br>
+ <input type="month"><br><br>
 <label for="text">gender:</label>
 <label for="text">male</label>
 <input type="radio" name="gender">
@@ -104,6 +104,7 @@
 <input type="file"><hr>
 <input type="submit">
 <button>clear the data</button>
+
 
 
 
