--- a/file.html
+++ b/file.html
@@ -5,124 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+.one{
+    color: azure;
+    background-color: brown;
+}
+.two{
+    color: azure;background-color: brown;
+}
+</style>
+<body>
+
+<center><h1>Form</h1></center> 
+<hr size="2"
+<form action="">
+    <fieldset>
+        <label for="text">Name</label>
+        <input type="text" placeholder="first name">
+        <input type="text" placeholder="middle name">
+        <input type="text" placeholder="last name">
+        <label for="text">Address</label>
+        <input type="text" placeholder="Enter your address"><br>
+        <label for="">contact</label>
+        <input type="text" placeholder="contact no"><br>
+        <label for="">Bloodgroup</label>
+        <select name="" id="">
+            <option value="">A+</option>
+            <option value="">B+</option>
+            <option value="">o+</option>
+            <option value="">AB+</option>
+            <option value="">AB-</option>
+            <option value="">o-</option>
+        </select>
+    </fieldset><br><br><br>
+
+    <fieldset>
+        <legend> Personal Info</legend>
+        <form action="">
+            <label for="text">Name</label>
+            <input type="text" placeholder="enter the name">
+            <input type="text" placeholder="middle name">
+        <input type="text" placeholder="last name"><br>
+        <label for="text">Address</label>
+        <input type="text" placeholder="Enter your address">
 
 
-   <center><h1 style="background-color: red;">Order and unorder list</h1></center><br><br>
-   <!--order list-->
-   <ol>
-    <li>Programming Language
-        <ul>
-            <li>C</li>
-            <li>C++</li>
-            <li>java</li>
-         </ul>
-
-    </li>
-    <li>DSA
-        <ul type="square">
-            <li>Array</li>
-            <li>LinkliSt</li>
-            <li>stack</li>
-            <li>Queue</li>
-            <li>Trees</li>
-            <li>Graphs</li>
-
-        </ul>
-    </li>
-   </ol>
-
-  <center> <h2 style="background-color: red;">table format</h2> </center>
-  <table style="background-color: red;" border="1" cellspacing="0" width="500">
-    <tr>
-        <th>Header 1</th>
-        <th>Header 2</th>
-        <th>Header 3</th>
-        <th> Header 4</th>
-        <th>Header 5</th>
-
-    </tr>
-    <tr>
-        <th>Row 1,col 1</th>
-        <th>Row 1,col 2</th>
-        <th>Row 1,Col 3</th>
-        <th>Row 1, Col 4</th>
-        <th>Row 1,Col 5</th>
-
-    </tr>
-    <tr>
-        <th>Row 2,Col 1</th>
-        <th>Row 2, Col 2</th>
-        <th>Row 2,Col 3</th>
-        <th>Row 2,Col 4</th>
-        <th>Row 2,Col 5</th>
-    </tr>
-    <tr>
-        <th>Row 3,Col 1</th>
-        <th>row 3,col 2</th>
-        <th>Row 3,Col 3 </th>
-        <th>Row 3,Col 4</th>
-        <th>Row 3,Col 5</th>
-    </tr>
-    <tr>
-        <th>Row 4,Col 1</th>
-        <th>Row 4,col 2</th>
-        <th>Row 4,Col 3</th>
-        <th>Row 4,Col 4</th>
-        <th>Row 4,Col 5</th>
-    </tr>
-    <tr>
-        <th>Row 5,Col1</th>
-        <th>Row5,Col2</th>
-        <th>Row5,Col3</th>
-        <th>Row5,Col4</th>
-        <th>row5,col5</th>
-    </tr>
- </table>
- <center><h3 style="background-color: red;"> Anchor tag</h3></center>
- <a href https://www.youtube.com/>facebook</a> <Br> <br>     
- <a href https://www.instagram.com/>instagram</a>
-<center> <h4 style="background-color: red;">Form</h4></center>
- <hr><p style="color: red;"><marquee> Driven by passion,guided by excellence.</marquee></p><hr>
- <label for="Name" >Name</label>
- <input type="text" placeholder="first name">
- <input type="text" placeholder="middle name">
- <input type="text" placeholder="last name">
- <label for="Password">password</label>
- <input type="text" placeholder=" enter your password"><br><br>
- <label for="Months">Months</label>
- <input type="month"><br><br>
-<label for="text">gender:</label>
-<label for="text">male</label>
-<input type="radio" name="gender">
-<label for="text">female</label>
-<input type="radio" name="gender">
-<label for="text">others</label>
-<input type="radio" name="gender"><br><br>
-<label for="text">About me</label>
-<textarea name=""id="" cols="10" rows="10"></textarea><br><br>
-<label for="text">ADDRESS of file:</label><br><br>
-<input type="file"><hr>
-<input type="submit">
-<button>clear the data</button>
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
+        </form>
+    </fieldset>
+</form>
+<img src="downloadj.peg.jpeg" alt="loding" width="100" height="auto">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kJTgA-aBwZA?si=MycEcClPgbFwf9l6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1><center>Div</center></h1>
+<div style="background-color:salmon;">
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione error consequatur reprehenderit vero laborum quam itaque eveniet aspernatur, ad aperiam iure, alias dolorem minima corporis! In at obcaecati aperiam officia.</p>
+</div>
+<h1><center>Span</center></h1>
+<span style="background-color:slategrey;">
     
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi distinctio modi non aliquid, dolor eum totam ullam maiores ea aliquam, repellendus delectus dolorem ipsa nihil veniam impedit iusto! Nam, autem.
+ </span><br><br>
+ <span><p>Data structure</p></span>
+ <span><p>Primitive data structure</p></span>
+ <div Class="one" id="one">
+   <center> <h1>about me</h1></center>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, ad. Eaque magni facere atque nisi rerum, animi iste aspernatur odit dolores libero perspiciatis laudantium iure id! Nam deserunt est maxime?</p>
+    </div
+    <div class="two" id="two">
+       <center> <h1>contact section</h1></center>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eos ad et! Nemo, voluptatum perspiciatis quo commodi alias repellat animi facilis ipsum porro soluta aliquid quod, repellendus delectus autem velit.</P>
+    </div>
+</body>
