--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 </head>
 <style>
     img{
-        margin: 0px,0px,0px,-2px,0px;
+        margin: auto;
     }
 </style>
 <body>
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-    <img src="./hotel menu.jpg" alt="" width="100%">
-
+    <img src="https://anmol-chhetri.github.io/menu.github.io/Animation.gif" alt="" width="100%">
+  <img src="https://anmol-chhetri.github.io/menu.github.io/Main.png" alt="" width="100%">
+    <img src="https://anmol-chhetri.github.io/menu.github.io/2.png" alt="" width="100%">
+    <img src="https://anmol-chhetri.github.io/menu.github.io/3.png" alt="" width="100%">
+    <img src="https://anmol-chhetri.github.io/menu.github.io/4.png" alt="" width="100%">
+    <img src="https://anmol-chhetri.github.io/menu.github.io/5.png" alt="" width="100%">
+    <img src="https://anmol-chhetri.github.io/menu.github.io/6.png" alt="" width="100%">
+    <img src="/menu.png" alt="" width="100%">
+<img src="./hotel menu.jpg" alt="" width="100%">
 
 </body>
 </html>
