--- a/study.html
+++ b/study.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href=
+
 </head>
 <body>
+    <center><h1>about me</h1></center>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque natus eligendi laboriosam reiciendis aperiam, exercitationem illo pariatur quis vero? Debitis laudantium provident porro magni? Magnam libero molestias quae provident.</p>
     
+        <div class="container">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facilis! Laborum, excepturi, eaque perferendis eos nisi enim saepe at, nulla maiores recusandae magnam quisquam delectus aspernatur vero perspiciatis beatae cupiditate.
+            </p> </div>
+    
+    <div id="collage">
+       <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, officiis ullam. Placeat porro aliquid libero alias, tempora enim ut iure ipsam impedit nisi veritatis nesciunt, architecto ducimus modi, ratione eius?
+       </p>
+   
+    <img src="menu.png">
+      <img src="menu.png">
+        <img src="menu.png">
+          <img src="menu.png">
+           <img src="menu.png">
+              <img src="menu.png">
+    </div>
+<body>
+
 </body>
 </html>
