file name changed

--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  
+    <link rel="stylesheet" href="./port.css">
 </head>
-<style>
-    img{
-        margin: auto;
-    }
-</style>
+<nav>
+<h1>Shrishti Bohora</h1>
+<ul style="display: flex;list-style: none; gap: 20px;">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a</li>
+    <li><a href="#">Experience</a</li>
+    <li><a href="#">Blog</a</li>
+        <li><a href="#">Login</a></li>
+
+</ul>
+</nav>
+<section style="display: flex;background-color: bisque; padding-left: 10vh;">
+    <div>
+<h6 class="start">REATIABLAE,PERSONAL,FAST</h6>
+<h1 class="title">Agency Manager <span>Citizen Life Insurance</span></h1>
+<P>Agency Manager Of Citizen Life Insurance ,Leads With 3 years of insurance expertise,ensuring expectional client service andstratigic excellence.</P><br>
+<button class="page"><a href="#">contact me</a></button>
+    </div>
+    <div class="img">
+        <img src="./WhatsApp Image 2025-06-15 at 18.21.38_6160503e.jpg" alt="">
+
+    </div>
+</section>
 <body>
-    <img src="https://anmol-chhetri.github.io/menu.github.io/Animation.gif" alt="" width="100%">
-  <img src="https://anmol-chhetri.github.io/menu.github.io/Main.png" alt="" width="100%">
-    <img src="https://anmol-chhetri.github.io/menu.github.io/2.png" alt="" width="100%">
-    <img src="https://anmol-chhetri.github.io/menu.github.io/3.png" alt="" width="100%">
-    <img src="https://anmol-chhetri.github.io/menu.github.io/4.png" alt="" width="100%">
-    <img src="https://anmol-chhetri.github.io/menu.github.io/5.png" alt="" width="100%">
-    <img src="https://anmol-chhetri.github.io/menu.github.io/6.png" alt="" width="100%">
-    <img src="/menu.png" alt="" width="100%">
-<img src="./hotel menu.jpg" alt="" width="100%">
-
-
+    
 </body>
 </html>
