--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./port.css">
+     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta property="og:title" content="Shrishti Bohora" />
+<meta property="og:description" content="Welcome to Shrishti Bohora – Your guide to spiritual insights, transformative events, and uplifting news." />
+<meta property="og:url" content="" />
+<meta property="og:type" content="website" />
+ <title>Anmol Chhetri - Personal Portfolio</title>
+    <meta name="description" content="Personal portfolio for Shrishti Bohora, BCA student from Butwal" />
+    <meta name="author" content="Shrishti Bohora" />
+ 
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
     <nav>
-        <div class="logo"><a href="#">Shrishti Bohora</a></div>
+        <div class="logo"><a href="#"><i class="fa-solid fa-house-user"></i>Shrishti Bohora</a></div>
         <ul class="logo1">
-<li><a href="#About">About</a></li>
-<li><a href="#Education">Education</a></li>
-<li><a href="#Contact">Contact</a></li>
-<li><a href="#login">Login</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Education">Education</a></li>
+            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#login">Login</a></li>
         </ul>
+    <select name="" id="">
+        <option value="">About</option>
+        <option value="">Education</option>
+        <option value="">Contact</option>   
+    </select> 
     </nav>
     <main>
         <section  class="intro">
@@ -24,7 +36,7 @@
 <div class="intro2">
  <center><img src="./pf.jpg" alt=""></center>
 </div>
-    <p>I am Shrishti Bohora, a BCA student at Butwal Kalika Campus,pssionate about programming,innovation, and creating impactful solutions.</p>
+    <p>I am Shrishti Bohora, a BCA student at Butwal Kalika Campus,passionate about programming,innovation, and creating impactful solutions.</p>
     <a href="#"><Button>Contact Me</Button></a>
     <a href="#"><button>Learn More</button></a>
 </div>
@@ -37,22 +49,30 @@
                 I enjoy learning new technologies and applying my knowlodge to create useful applications.
             </p>
         </section>
+            <div class="edu"><h1>Education<i class="fa-solid fa-user-graduate"></i></h1></div>
         <section class="Education" id="Education">
-            <h2>Education</h2>
             <div class="Campus">
                 <fieldset>
                     <legend>
                         <button>present</button>
                     </legend>
                     <h2>Butwal Kalika Campus</h2>
+                    <ul>
+                        <li class="li" id="li">Program:Bacheloer Degree</li>
+                        <li>University:TU</li>
                     <p>I'm currently studing BCA at Butwal Kalika Campus</p>
                     <a href="#"><button>location</button></a>
+                    </ul>
                 </fieldset>
             </div>
             <div class="collage">
                 <fieldset>
                     <legend><a href="#"><button>collage</button></a></legend>
                     <h2>Mahendra secondary School</h2>
+                    <ul>
+                        <li class="li" id="li">Program:High School</li>
+                        <li class="li" id="li">Board:NEB </li>
+                    </ul>
                     <a href="#"><button>location</button></a>
                 </fieldset>
             </div>
@@ -60,16 +80,25 @@
                 <fieldset>
                     <legend><a href="#"><button>school</button></a></legend>
                       <h2>Mahendra secondary School</h2>
+                      <ul>
+                        <li>Program:School level</li>
+                        <li>Board:NEB</li>
+                      </ul>
                     <a href="#"><button>location</button></a>
                 </fieldset>
             </div>
             
         </section>
         <section class="Contact" id="Contact">
-<h1>Contact Me</h1>
-<a href="https://www.instagram.com/shrishtee_bohora/?igsh=MWl5c2xneTQ5ZmN6ag%3D%3D#"><button>Instagram</button></a>
-
-        </section>
+<center><h1>Contact Me<i class="fa-solid fa-id-badge"></i></h1></center>
+<ul>
+<li>Email address:<a href="shrishtibohora@gmail.com"><button>Email</button></a></li>
+<li><i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/shrishtee_bohora?igsh=MWl5c2xneTQ5ZmN6ag=="><button>insta</button></a></li>    
+       <li><i class="fa-brands fa-facebook"></i><a href="https://www.facebook.com/share/1EuonLWwD1/"><button>facebook</button></a></li>
+     </ul>
     </main>
+    <footer class="footer" id="footer">
+        <h2>Copy right reserved @2025</h2>
+    </footer> 
 </body> 
 </html>
