--- a/port.html
+++ b/port.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta property="og:title" content="Shrishti Bohora" />
 <meta property="og:description" content="Welcome to Shrishti Bohora – Your guide to spiritual insights, transformative events, and uplifting news." />
-<meta property="og:url" content="" />
+<meta property="og:url" content="https://shrishtibohora.github.io/HTML-day1/" />
 <meta property="og:type" content="website" />
- <title>Anmol Chhetri - Personal Portfolio</title>
+ <title>Shrishti Bohora - Personal Portfolio</title>
     <meta name="description" content="Personal portfolio for Shrishti Bohora, BCA student from Butwal" />
     <meta name="author" content="Shrishti Bohora" />
  
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./port.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     <select name="" id="">
         <option value="">About</option>
         <option value="">Education</option>
-        <option value="">Contact</option>   
+        <option value=""><a href="#Contact">Contact</a></option>   
     </select> 
     </nav>
     <main>
@@ -49,7 +49,7 @@
                 I enjoy learning new technologies and applying my knowlodge to create useful applications.
             </p>
         </section>
-            <div class="edu"><h1>Education<i class="fa-solid fa-user-graduate"></i></h1></div>
+            <div class="edu"><h1>Educatione"></i><i class="fa-solid fa-user-graduat</h1></div>
         <section class="Education" id="Education">
             <div class="Campus">
                 <fieldset>
